--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-	"name": "awesome-project",
+	"name": "std-nodejs-typescript",
 	"engines": {
 		"node": ">=24.7.0",
-		"npm": ">=10.15.0"
+		"pnpm": ">=10.15.0"
 	},
 	"version": "1.0.0",
-	"description": "",
+	"description": "A minimal Node.js + TypeScript project template",
 	"license": "ISC",
 	"author": "",
 	"type": "module",
